Adapt tutorial to new naming convention

--- a/Tutorial_Training_for_BO.ipynb
+++ b/Tutorial_Training_for_BO.ipynb
@@ -26,7 +26,7 @@
     "from ConfigSpace import hyperparameters as CSH\n",
     "\n",
     "config_heboplus = {\n",
-    "     'priordataloader_class': priors.get_batch_to_dataloader(\n",
+    "     'priordataloader_class_or_get_batch': priors.get_batch_to_dataloader(\n",
     "         priors.get_batch_sequence(\n",
     "             priors.hebo_prior.get_batch,\n",
     "             priors.utils.sample_num_feaetures_get_batch,\n",
@@ -52,7 +52,7 @@
     "       'observation_noise': True}},\n",
     "     'epochs': 50,\n",
     "     'lr': 0.0001,\n",
-    "     'bptt': 60,\n",
+    "     'seq_len': 60,\n",
     "     'single_eval_pos_gen': utils.get_uniform_single_eval_pos_sampler(50, min_len=1), #<function utils.get_uniform_single_eval_pos_sampler.<locals>.<lambda>()>,\n",
     "     'aggregate_k_gradients': 2,\n",
     "     'nhid': 1024,\n",
@@ -64,7 +64,7 @@
     "\n",
     "\n",
     "config_heboplus_userpriors = {**config_heboplus,\n",
-    "    'priordataloader_class': priors.get_batch_to_dataloader(\n",
+    "    'priordataloader_class_or_get_batch': priors.get_batch_to_dataloader(\n",
     "                              priors.get_batch_sequence(\n",
     "                                  priors.hebo_prior.get_batch,\n",
     "                                  priors.condition_on_area_of_opt.get_batch,\n",
@@ -73,7 +73,7 @@
     "    'style_encoder_generator': encoders.get_normalized_uniform_encoder(encoders.get_variable_num_features_encoder(encoders.Linear))\n",
     "}\n",
     "\n",
-    "config_bnn = {'priordataloader_class': priors.get_batch_to_dataloader(\n",
+    "config_bnn = {'priordataloader_class_or_get_batch': priors.get_batch_to_dataloader(\n",
     "         priors.get_batch_sequence(\n",
     "             priors.simple_mlp.get_batch,\n",
     "             priors.input_warping.get_batch,\n",
@@ -102,7 +102,7 @@
     "                                 },\n",
     "     'epochs': 50,\n",
     "     'lr': 0.0001,\n",
-    "     'bptt': 60,\n",
+    "     'seq_len': 60,\n",
     "     'single_eval_pos_gen': utils.get_uniform_single_eval_pos_sampler(50, min_len=1), \n",
     "     'aggregate_k_gradients': 1,\n",
     "     'nhid': 1024,\n",
@@ -118,10 +118,9 @@
     "    bs = 128\n",
     "    all_targets = []\n",
     "    for num_hps in [2,8,12]: # a few different samples in case the number of features makes a difference in y dist\n",
-    "        b = config['priordataloader_class'].get_batch_method(bs,1000,num_hps,epoch=0,device=device,\n",
-    "                                                              hyperparameters=\n",
-    "                                                              {**config['extra_prior_kwargs_dict']['hyperparameters'],\n",
-    "                                                               'num_hyperparameter_samples_per_batch': -1,})\n",
+    "        b = config['priordataloader_class_or_get_batch'].get_batch_method(\n",
+    "            bs,1000,  num_hps, epoch=0, device=device, hyperparameters={**config['extra_prior_kwargs_dict']['hyperparameters'],\n",
+    "                                                                        'num_hyperparameter_samples_per_batch': -1,})\n",
     "        all_targets.append(b.target_y.flatten())\n",
     "    return torch.cat(all_targets,0)\n",
     "\n",
