fix: formatting with ruff

--- a/Tutorial_Training_for_BO.ipynb
+++ b/Tutorial_Training_for_BO.ipynb
@@ -26,109 +26,152 @@
     "from ConfigSpace import hyperparameters as CSH\n",
     "\n",
     "config_heboplus = {\n",
-    "     'priordataloader_class_or_get_batch': priors.get_batch_to_dataloader(\n",
-    "         priors.get_batch_sequence(\n",
-    "             priors.hebo_prior.get_batch,\n",
-    "             priors.utils.sample_num_feaetures_get_batch,\n",
-    "         )\n",
-    "     ),\n",
-    "     'encoder_generator': encoders.get_normalized_uniform_encoder(encoders.get_variable_num_features_encoder(encoders.Linear)),\n",
-    "     'emsize': 512,\n",
-    "     'nhead': 4,\n",
-    "     'warmup_epochs': 5,\n",
-    "     'y_encoder_generator': encoders.Linear,\n",
-    "     'batch_size': 128,\n",
-    "     'scheduler': utils.get_cosine_schedule_with_warmup,\n",
-    "     'extra_prior_kwargs_dict': {'num_features': 18,\n",
-    "      'hyperparameters': {\n",
-    "       'lengthscale_concentration': 1.2106559584074301,\n",
-    "       'lengthscale_rate': 1.5212245992840594,\n",
-    "       'outputscale_concentration': 0.8452312502679863,\n",
-    "       'outputscale_rate': 0.3993553245745406,\n",
-    "       'add_linear_kernel': False,\n",
-    "       'power_normalization': False,\n",
-    "       'hebo_warping': False,\n",
-    "       'unused_feature_likelihood': 0.3,\n",
-    "       'observation_noise': True}},\n",
-    "     'epochs': 50,\n",
-    "     'lr': 0.0001,\n",
-    "     'seq_len': 60,\n",
-    "     'single_eval_pos_gen': utils.get_uniform_single_eval_pos_sampler(50, min_len=1), #<function utils.get_uniform_single_eval_pos_sampler.<locals>.<lambda>()>,\n",
-    "     'aggregate_k_gradients': 2,\n",
-    "     'nhid': 1024,\n",
-    "     'steps_per_epoch': 1024,\n",
-    "     'weight_decay': 0.0,\n",
-    "     'train_mixed_precision': False,\n",
-    "     'efficient_eval_masking': True,\n",
-    "     'nlayers': 12}\n",
-    "\n",
-    "\n",
-    "config_heboplus_userpriors = {**config_heboplus,\n",
-    "    'priordataloader_class_or_get_batch': priors.get_batch_to_dataloader(\n",
-    "                              priors.get_batch_sequence(\n",
-    "                                  priors.hebo_prior.get_batch,\n",
-    "                                  priors.condition_on_area_of_opt.get_batch,\n",
-    "                                  priors.utils.sample_num_feaetures_get_batch\n",
-    "                              )),\n",
-    "    'style_encoder_generator': encoders.get_normalized_uniform_encoder(encoders.get_variable_num_features_encoder(encoders.Linear))\n",
+    "    \"priordataloader_class_or_get_batch\": priors.get_batch_to_dataloader(\n",
+    "        priors.get_batch_sequence(\n",
+    "            priors.hebo_prior.get_batch,\n",
+    "            priors.utils.sample_num_feaetures_get_batch,\n",
+    "        )\n",
+    "    ),\n",
+    "    \"encoder_generator\": encoders.get_normalized_uniform_encoder(\n",
+    "        encoders.get_variable_num_features_encoder(encoders.Linear)\n",
+    "    ),\n",
+    "    \"emsize\": 512,\n",
+    "    \"nhead\": 4,\n",
+    "    \"warmup_epochs\": 5,\n",
+    "    \"y_encoder_generator\": encoders.Linear,\n",
+    "    \"batch_size\": 128,\n",
+    "    \"scheduler\": utils.get_cosine_schedule_with_warmup,\n",
+    "    \"extra_prior_kwargs_dict\": {\n",
+    "        \"num_features\": 18,\n",
+    "        \"hyperparameters\": {\n",
+    "            \"lengthscale_concentration\": 1.2106559584074301,\n",
+    "            \"lengthscale_rate\": 1.5212245992840594,\n",
+    "            \"outputscale_concentration\": 0.8452312502679863,\n",
+    "            \"outputscale_rate\": 0.3993553245745406,\n",
+    "            \"add_linear_kernel\": False,\n",
+    "            \"power_normalization\": False,\n",
+    "            \"hebo_warping\": False,\n",
+    "            \"unused_feature_likelihood\": 0.3,\n",
+    "            \"observation_noise\": True,\n",
+    "        },\n",
+    "    },\n",
+    "    \"epochs\": 50,\n",
+    "    \"lr\": 0.0001,\n",
+    "    \"seq_len\": 60,\n",
+    "    \"single_eval_pos_gen\": utils.get_uniform_single_eval_pos_sampler(\n",
+    "        50, min_len=1\n",
+    "    ),  # <function utils.get_uniform_single_eval_pos_sampler.<locals>.<lambda>()>,\n",
+    "    \"aggregate_k_gradients\": 2,\n",
+    "    \"nhid\": 1024,\n",
+    "    \"steps_per_epoch\": 1024,\n",
+    "    \"weight_decay\": 0.0,\n",
+    "    \"train_mixed_precision\": False,\n",
+    "    \"efficient_eval_masking\": True,\n",
+    "    \"nlayers\": 12,\n",
     "}\n",
     "\n",
-    "config_bnn = {'priordataloader_class_or_get_batch': priors.get_batch_to_dataloader(\n",
-    "         priors.get_batch_sequence(\n",
-    "             priors.simple_mlp.get_batch,\n",
-    "             priors.input_warping.get_batch,\n",
-    "             priors.utils.sample_num_feaetures_get_batch,\n",
-    "         )\n",
-    "     ),\n",
-    "     'encoder_generator': encoders.get_normalized_uniform_encoder(encoders.get_variable_num_features_encoder(encoders.Linear)),\n",
-    "     'emsize': 512,\n",
-    "     'nhead': 4,\n",
-    "     'warmup_epochs': 5,\n",
-    "     'y_encoder_generator': encoders.Linear,\n",
-    "     'batch_size': 128,\n",
-    "     'scheduler': utils.get_cosine_schedule_with_warmup,\n",
-    "     'extra_prior_kwargs_dict': {'num_features': 18,\n",
-    "      'hyperparameters': {'mlp_num_layers': CSH.UniformIntegerHyperparameter('mlp_num_layers', 8, 15),\n",
-    "       'mlp_num_hidden': CSH.UniformIntegerHyperparameter('mlp_num_hidden', 36, 150),\n",
-    "       'mlp_init_std': CSH.UniformFloatHyperparameter('mlp_init_std',0.08896049884896237, 0.1928554813280186),\n",
-    "       'mlp_sparseness': 0.1449806273312999,\n",
-    "       'mlp_input_sampling': 'uniform',\n",
-    "       'mlp_output_noise': CSH.UniformFloatHyperparameter('mlp_output_noise', 0.00035983014290491186, 0.0013416342770574585),\n",
-    "       'mlp_noisy_targets': True,\n",
-    "       'mlp_preactivation_noise_std': CSH.UniformFloatHyperparameter('mlp_preactivation_noise_std',0.0003145707276259681, 0.0013753183831259406),\n",
-    "       'input_warping_c1_std': 0.9759720822120248,\n",
-    "       'input_warping_c0_std': 0.8002534583197192,\n",
-    "       'num_hyperparameter_samples_per_batch': 16}\n",
-    "                                 },\n",
-    "     'epochs': 50,\n",
-    "     'lr': 0.0001,\n",
-    "     'seq_len': 60,\n",
-    "     'single_eval_pos_gen': utils.get_uniform_single_eval_pos_sampler(50, min_len=1), \n",
-    "     'aggregate_k_gradients': 1,\n",
-    "     'nhid': 1024,\n",
-    "     'steps_per_epoch': 1024,\n",
-    "     'weight_decay': 0.0,\n",
-    "     'train_mixed_precision': True,\n",
-    "     'efficient_eval_masking': True,\n",
+    "\n",
+    "config_heboplus_userpriors = {\n",
+    "    **config_heboplus,\n",
+    "    \"priordataloader_class_or_get_batch\": priors.get_batch_to_dataloader(\n",
+    "        priors.get_batch_sequence(\n",
+    "            priors.hebo_prior.get_batch,\n",
+    "            priors.condition_on_area_of_opt.get_batch,\n",
+    "            priors.utils.sample_num_feaetures_get_batch,\n",
+    "        )\n",
+    "    ),\n",
+    "    \"style_encoder_generator\": encoders.get_normalized_uniform_encoder(\n",
+    "        encoders.get_variable_num_features_encoder(encoders.Linear)\n",
+    "    ),\n",
+    "}\n",
+    "\n",
+    "config_bnn = {\n",
+    "    \"priordataloader_class_or_get_batch\": priors.get_batch_to_dataloader(\n",
+    "        priors.get_batch_sequence(\n",
+    "            priors.simple_mlp.get_batch,\n",
+    "            priors.input_warping.get_batch,\n",
+    "            priors.utils.sample_num_feaetures_get_batch,\n",
+    "        )\n",
+    "    ),\n",
+    "    \"encoder_generator\": encoders.get_normalized_uniform_encoder(\n",
+    "        encoders.get_variable_num_features_encoder(encoders.Linear)\n",
+    "    ),\n",
+    "    \"emsize\": 512,\n",
+    "    \"nhead\": 4,\n",
+    "    \"warmup_epochs\": 5,\n",
+    "    \"y_encoder_generator\": encoders.Linear,\n",
+    "    \"batch_size\": 128,\n",
+    "    \"scheduler\": utils.get_cosine_schedule_with_warmup,\n",
+    "    \"extra_prior_kwargs_dict\": {\n",
+    "        \"num_features\": 18,\n",
+    "        \"hyperparameters\": {\n",
+    "            \"mlp_num_layers\": CSH.UniformIntegerHyperparameter(\"mlp_num_layers\", 8, 15),\n",
+    "            \"mlp_num_hidden\": CSH.UniformIntegerHyperparameter(\n",
+    "                \"mlp_num_hidden\", 36, 150\n",
+    "            ),\n",
+    "            \"mlp_init_std\": CSH.UniformFloatHyperparameter(\n",
+    "                \"mlp_init_std\", 0.08896049884896237, 0.1928554813280186\n",
+    "            ),\n",
+    "            \"mlp_sparseness\": 0.1449806273312999,\n",
+    "            \"mlp_input_sampling\": \"uniform\",\n",
+    "            \"mlp_output_noise\": CSH.UniformFloatHyperparameter(\n",
+    "                \"mlp_output_noise\", 0.00035983014290491186, 0.0013416342770574585\n",
+    "            ),\n",
+    "            \"mlp_noisy_targets\": True,\n",
+    "            \"mlp_preactivation_noise_std\": CSH.UniformFloatHyperparameter(\n",
+    "                \"mlp_preactivation_noise_std\",\n",
+    "                0.0003145707276259681,\n",
+    "                0.0013753183831259406,\n",
+    "            ),\n",
+    "            \"input_warping_c1_std\": 0.9759720822120248,\n",
+    "            \"input_warping_c0_std\": 0.8002534583197192,\n",
+    "            \"num_hyperparameter_samples_per_batch\": 16,\n",
+    "        },\n",
+    "    },\n",
+    "    \"epochs\": 50,\n",
+    "    \"lr\": 0.0001,\n",
+    "    \"seq_len\": 60,\n",
+    "    \"single_eval_pos_gen\": utils.get_uniform_single_eval_pos_sampler(50, min_len=1),\n",
+    "    \"aggregate_k_gradients\": 1,\n",
+    "    \"nhid\": 1024,\n",
+    "    \"steps_per_epoch\": 1024,\n",
+    "    \"weight_decay\": 0.0,\n",
+    "    \"train_mixed_precision\": True,\n",
+    "    \"efficient_eval_masking\": True,\n",
     "}\n",
     "\n",
     "\n",
     "# now let's add the criterions, where we decide the border positions based on the prior\n",
-    "def get_ys(config, device='cuda:0'):\n",
+    "def get_ys(config, device=\"cuda:0\"):\n",
     "    bs = 128\n",
     "    all_targets = []\n",
-    "    for num_hps in [2,8,12]: # a few different samples in case the number of features makes a difference in y dist\n",
-    "        b = config['priordataloader_class_or_get_batch'].get_batch_method(\n",
-    "            bs,1000,  num_hps, epoch=0, device=device, hyperparameters={**config['extra_prior_kwargs_dict']['hyperparameters'],\n",
-    "                                                                        'num_hyperparameter_samples_per_batch': -1,})\n",
+    "    for num_hps in [\n",
+    "        2,\n",
+    "        8,\n",
+    "        12,\n",
+    "    ]:  # a few different samples in case the number of features makes a difference in y dist\n",
+    "        b = config[\"priordataloader_class_or_get_batch\"].get_batch_method(\n",
+    "            bs,\n",
+    "            1000,\n",
+    "            num_hps,\n",
+    "            epoch=0,\n",
+    "            device=device,\n",
+    "            hyperparameters={\n",
+    "                **config[\"extra_prior_kwargs_dict\"][\"hyperparameters\"],\n",
+    "                \"num_hyperparameter_samples_per_batch\": -1,\n",
+    "            },\n",
+    "        )\n",
     "        all_targets.append(b.target_y.flatten())\n",
-    "    return torch.cat(all_targets,0)\n",
+    "    return torch.cat(all_targets, 0)\n",
     "\n",
-    "def add_criterion(config, device='cuda:0'):\n",
-    "    return {**config, 'criterion': bar_distribution.FullSupportBarDistribution(\n",
-    "        bar_distribution.get_bucket_limits(1000,ys=get_ys(config,device).cpu())\n",
-    "    )}\n",
-    "\n"
+    "\n",
+    "def add_criterion(config, device=\"cuda:0\"):\n",
+    "    return {\n",
+    "        **config,\n",
+    "        \"criterion\": bar_distribution.FullSupportBarDistribution(\n",
+    "            bar_distribution.get_bucket_limits(1000, ys=get_ys(config, device).cpu())\n",
+    "        ),\n",
+    "    }"
    ]
   },
   {
@@ -139,7 +182,8 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings('ignore', category=UserWarning)"
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)"
    ]
   },
   {
@@ -343,11 +387,11 @@
    ],
    "source": [
     "# Now let's train either with\n",
-    "train.train(**add_criterion(config_heboplus,device='cpu:0'))\n",
+    "train.train(**add_criterion(config_heboplus, device=\"cpu:0\"))\n",
     "# or\n",
-    "#train.train(**add_criterion(config_heboplus_userpriors))\n",
+    "# train.train(**add_criterion(config_heboplus_userpriors))\n",
     "# or\n",
-    "#train.train(**add_criterion(config_bnn))"
+    "# train.train(**add_criterion(config_bnn))"
    ]
   },
   {
