--- a/GP_fitting_a_step.ipynb
+++ b/GP_fitting_a_step.ipynb
@@ -13,33 +13,36 @@
     "import matplotlib\n",
     "\n",
     "# Set up the style\n",
-    "scatter_size = 2.\n",
-    "line_size = .75\n",
+    "scatter_size = 2.0\n",
+    "line_size = 0.75\n",
     "\n",
     "palette = sns.color_palette(\"muted\")\n",
     "sns.set_palette(palette)\n",
     "\n",
-    "matplotlib.rcParams['mathtext.fontset'] = 'stix'\n",
-    "matplotlib.rcParams['font.family'] = 'STIXGeneral'\n",
-    "matplotlib.rcParams['axes.titlesize'] = 9\n",
-    "matplotlib.rcParams['font.size'] = 8\n",
+    "matplotlib.rcParams[\"mathtext.fontset\"] = \"stix\"\n",
+    "matplotlib.rcParams[\"font.family\"] = \"STIXGeneral\"\n",
+    "matplotlib.rcParams[\"axes.titlesize\"] = 9\n",
+    "matplotlib.rcParams[\"font.size\"] = 8\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
+    "\n",
     "def step_function(x):\n",
     "    return (x >= 0).float()\n",
+    "\n",
     "\n",
     "class ExactGPModel(gpytorch.models.ExactGP):\n",
     "    def __init__(self, train_x, train_y, likelihood):\n",
     "        super(ExactGPModel, self).__init__(train_x, train_y, likelihood)\n",
     "        self.mean_module = gpytorch.means.ConstantMean()\n",
     "        self.covar_module = gpytorch.kernels.ScaleKernel(gpytorch.kernels.RBFKernel())\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        mean_x = self.mean_module(x)\n",
     "        covar_x = self.covar_module(x)\n",
     "        return gpytorch.distributions.MultivariateNormal(mean_x, covar_x)\n",
+    "\n",
     "\n",
     "# Fixed hyperparameters\n",
     "outputscale = 1.0\n",
@@ -47,19 +50,21 @@
     "noise_level = 0.1  # Explicit noise level\n",
     "\n",
     "test_x = torch.linspace(-3, 3, 300).to(device)\n",
-    "num_context_points_list = [10, 20, 50, 100, 200,400]\n",
+    "num_context_points_list = [10, 20, 50, 100, 200, 400]\n",
     "\n",
     "width = 7\n",
-    "figsize = (width,2*width/4.5)\n",
+    "figsize = (width, 2 * width / 4.5)\n",
     "fig, axs = plt.subplots(2, 3, figsize=figsize, dpi=400)\n",
     "axs = axs.ravel()\n",
     "\n",
     "for i, num_points in enumerate(num_context_points_list):\n",
     "    train_x = torch.linspace(-2, 2, num_points).to(device)\n",
-    "    train_y = step_function(train_x)# + torch.randn_like(train_x) * noise_level  # Add noise to targets\n",
+    "    train_y = step_function(\n",
+    "        train_x\n",
+    "    )  # + torch.randn_like(train_x) * noise_level  # Add noise to targets\n",
     "\n",
     "    likelihood = gpytorch.likelihoods.GaussianLikelihood().to(device)\n",
-    "    likelihood.noise = noise_level ** 2  # Set the noise level explicitly\n",
+    "    likelihood.noise = noise_level**2  # Set the noise level explicitly\n",
     "    model = ExactGPModel(train_x, train_y, likelihood).to(device)\n",
     "\n",
     "    model.covar_module.outputscale = outputscale\n",
@@ -83,26 +88,54 @@
     "    y_lower, y_upper = y_pred.confidence_region()\n",
     "\n",
     "    # Plot the results\n",
-    "    axs[i].plot(test_x_cpu.numpy(), step_function(test_x_cpu).numpy(), color=palette[0], linewidth=line_size, label='True Function')\n",
-    "    axs[i].scatter(train_x_cpu.numpy(), train_y_cpu.numpy(), s=scatter_size, c='black', zorder=2, label='In-Context Examples')\n",
-    "    axs[i].plot(test_x_cpu.numpy(), f_mean_cpu.numpy(), color=palette[1], linewidth=line_size, label='Posterior Ground Truth')\n",
-    "    axs[i].fill_between(test_x_cpu.numpy(), f_lower.cpu().numpy(), f_upper.cpu().numpy(), alpha=0.2, color=palette[1], label='Posterior Ground Truth 95% CI')\n",
-    "    \n",
+    "    axs[i].plot(\n",
+    "        test_x_cpu.numpy(),\n",
+    "        step_function(test_x_cpu).numpy(),\n",
+    "        color=palette[0],\n",
+    "        linewidth=line_size,\n",
+    "        label=\"True Function\",\n",
+    "    )\n",
+    "    axs[i].scatter(\n",
+    "        train_x_cpu.numpy(),\n",
+    "        train_y_cpu.numpy(),\n",
+    "        s=scatter_size,\n",
+    "        c=\"black\",\n",
+    "        zorder=2,\n",
+    "        label=\"In-Context Examples\",\n",
+    "    )\n",
+    "    axs[i].plot(\n",
+    "        test_x_cpu.numpy(),\n",
+    "        f_mean_cpu.numpy(),\n",
+    "        color=palette[1],\n",
+    "        linewidth=line_size,\n",
+    "        label=\"Posterior Ground Truth\",\n",
+    "    )\n",
+    "    axs[i].fill_between(\n",
+    "        test_x_cpu.numpy(),\n",
+    "        f_lower.cpu().numpy(),\n",
+    "        f_upper.cpu().numpy(),\n",
+    "        alpha=0.2,\n",
+    "        color=palette[1],\n",
+    "        label=\"Posterior Ground Truth 95% CI\",\n",
+    "    )\n",
+    "\n",
     "    axs[i].set_ylim(-0.5, 1.5)\n",
     "    axs[i].set_xlim(-2, 2)\n",
-    "    axs[i].set_title(f'{num_points} Context Examples')\n",
-    "    axs[i].set_xlabel('x')\n",
-    "    axs[i].set_ylabel('y')\n",
+    "    axs[i].set_title(f\"{num_points} Context Examples\")\n",
+    "    axs[i].set_xlabel(\"x\")\n",
+    "    axs[i].set_ylabel(\"y\")\n",
     "\n",
     "    # Remove top and right spines\n",
-    "    axs[i].spines['top'].set_visible(False)\n",
-    "    axs[i].spines['right'].set_visible(False)\n",
+    "    axs[i].spines[\"top\"].set_visible(False)\n",
+    "    axs[i].spines[\"right\"].set_visible(False)\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
     "# Add a common legend at the bottom\n",
     "handles, labels = axs[0].get_legend_handles_labels()\n",
-    "fig.legend(handles, labels, loc='lower center', ncol=4, bbox_to_anchor=(0.5, -0.05), fontsize=8)\n",
+    "fig.legend(\n",
+    "    handles, labels, loc=\"lower center\", ncol=4, bbox_to_anchor=(0.5, -0.05), fontsize=8\n",
+    ")\n",
     "plt.show()"
    ]
   }
